--- a/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
@@ -1,43 +1,31 @@
-﻿@page "/lineups/{lineupId:int}/select-artist"
+﻿@page "/artists"
 
 @layout LineupLayout
 
 @inject IArtistService ArtistApiService
 @inject ILineupService LineupApiService
 
-<h3>Select artist</h3>
+<h3>Artists</h3>
 
-@{
-    var artistHref = $"lineups/{LineupId}/create-artist";
-}
-<NavLink href="@artistHref">Create new</NavLink>
+<NavLink href="artists/create">Create new</NavLink>
 
-@if (_lineupServiceResult?.Data is { } lineupResult && _pagedServiceResult?.Data is { } artistResults)
+@if (_pagedServiceResult is not null)
 {
-    <p>Lineup: @(lineupResult.Name ?? lineupResult.Doors.ToLongDateString())</p>
-
-    <ul>
-        @foreach (var artistResult in artistResults)
-        {
-            <li>
-
+    if (_pagedServiceResult.Data is not null)
+    {
+        <ArtistIndex PagedServiceResult="_pagedServiceResult" Context="artistResult" OnPageChanged="(context) => FetchArtists(new PaginationRequest { Page = (uint)context.Page, PageSize = (uint)context.PageSize }, new ArtistFilter ())">
+            <ItemTemplate>
                 @{
-                    var editHref = $"lineups/{lineupResult.Id}/{artistResult.Id}/edit-artist";
+                    var editHref = $"artists/{artistResult.Id}";
                 }
                 <NavLink href="@editHref">@artistResult.Name</NavLink>
-
-                @{
-                    var selectHref = $"lineups/{LineupId}/{artistResult.Id}/add-performance";
-                }
-
-                <NavLink href="@selectHref">Select</NavLink>
-            </li>
-        }
-    </ul>
-
-    <PaginationBig Context="new Pagination { Page = (int)_pagedServiceResult.Page, PageSize = (int)_pagedServiceResult.PageSize, TotalCount = (int)_pagedServiceResult.TotalCount }"
-                   OnPageChanged="(context) => FetchArtists(LineupId, new PaginationRequest { Page = (uint)context.Page, PageSize = (uint)context.PageSize }, new ArtistFilter ())" />
-
+            </ItemTemplate>
+        </ArtistIndex>
+    }
+    else
+    {
+        <p>Error</p>
+    }
 }
 else
 {
@@ -45,29 +33,17 @@ else
 }
 
 @code {
-    [Parameter]
-    public int LineupId { get; set; }
-    private ServiceResult<LineupResult>? _lineupServiceResult;
-
     private PagedServiceResult<IList<ArtistResult>>? _pagedServiceResult;
 
-    protected override async Task OnParametersSetAsync()
+    protected override async Task OnInitializedAsync()
     {
-        _lineupServiceResult = await FetchLineup(LineupId, new PaginationRequest { Page = 1, PageSize = 5 });
+        await FetchArtists(new PaginationRequest { Page = 1, PageSize = 5 }, new ArtistFilter());
 
-        _pagedServiceResult = await FetchArtists(LineupId, new PaginationRequest { Page = 1, PageSize = 24 }, new ArtistFilter { });
-
-        await base.OnParametersSetAsync();
+        await base.OnInitializedAsync();
     }
 
-    private async Task<ServiceResult<LineupResult>?> FetchLineup(int id, PaginationRequest paginationRequest)
+    private async Task FetchArtists(PaginationRequest paginationRequest, ArtistFilter artistFilter)
     {
-        return await LineupApiService.Get(id, paginationRequest);
+        _pagedServiceResult = await ArtistApiService.GetAll(new PaginationRequest { Page = 1, PageSize = 5 }, new ArtistFilter());
     }
-
-    private async Task<PagedServiceResult<IList<ArtistResult>>?> FetchArtists(int id, PaginationRequest paginationRequest, ArtistFilter artistFilter)
-    {
-        return await ArtistApiService.GetAll(paginationRequest, artistFilter);
-    }
-
 }
