--- a/MusicClubManager.Cms.Blazor/Pages/Lineup/Create.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Lineup/Create.razor
@@ -26,11 +26,11 @@
         </div>
     </div>
 
-    <ul>
+    <FormButtons>
         <li><button type="submit">Create</button></li>
 
-        <li><button type="reset">Reset</button></li>
-    </ul>
+        <li><button type="reset" class="warning">Reset</button></li>
+    </FormButtons>
 </EditForm>
 
 @code {
