--- a/MusicClubManager.Cms.Blazor/_Imports.razor
+++ b/MusicClubManager.Cms.Blazor/_Imports.razor
@@ -11,7 +11,9 @@
 
 @using MusicClubManager.Abstractions
 @using MusicClubManager.Cms.Blazor.Components
+@using MusicClubManager.Cms.Blazor.Components.Artist
 @using MusicClubManager.Cms.Blazor.Components.Lineup
+@using MusicClubManager.Cms.Blazor.Components.Shared
 @using MusicClubManager.Cms.Blazor.Models.Contexts
 @using MusicClubManager.Cms.Blazor.Models.FormModels
 @using MusicClubManager.Dto.Enums
