--- a/MusicClubManager.Cms.Blazor/wwwroot/css/app.css
+++ b/MusicClubManager.Cms.Blazor/wwwroot/css/app.css
@@ -129,7 +129,7 @@ form {
                 padding: .5em;
             }
 
-    form > ul {
+/*    form > ul {
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
@@ -151,7 +151,7 @@ form {
 
         form > ul > li > button {
             border: none;
-        }
+        }*/
 
 h2 {
     font-size: 1.5em;
