--- a/MusicClubManager.Cms.Blazor/Pages/Home.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Home.razor
@@ -5,3 +5,5 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<img src="https://localhost:7188/image/3581bf20-400e-4afa-8490-5aefb0df7f20.png" alt="test image from api" />
