--- a/MusicClubManager.Cms.Blazor/Layout/MainLayout.razor
+++ b/MusicClubManager.Cms.Blazor/Layout/MainLayout.razor
@@ -6,11 +6,11 @@
 
         @if (_isMenuOpen)
         {
-            <button @onclick="() => _isMenuOpen = false">Close menu</button>
+            <button @onclick="() => _isMenuOpen = false">Close</button>
         }
         else
         {
-            <button @onclick="() => _isMenuOpen = true">Open menu</button>
+            <button @onclick="() => _isMenuOpen = true">Open</button>
         }
     </div>
 
