--- a/MusicClubManager.Cms.Blazor/Components/Artist/ArtistCreateForm.razor
+++ b/MusicClubManager.Cms.Blazor/Components/Artist/ArtistCreateForm.razor
@@ -8,11 +8,11 @@
 
     <ArtistInputs Model="_model"></ArtistInputs>
 
-    <FormButtons>
+    <Buttons>
         <li><button type="submit">Create</button></li>
 
         <li><button type="reset" class="warning">Reset</button></li>
-    </FormButtons>
+    </Buttons>
 </EditForm>
 
 @code {
