--- a/MusicClubManager.Cms.Blazor/Pages/Lineup/Create.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Lineup/Create.razor
@@ -29,11 +29,11 @@
         </div>
     </div>
 
-    <FormButtons>
+    <Buttons>
         <li><button type="submit">Create</button></li>
 
         <li><button type="reset" class="warning">Reset</button></li>
-    </FormButtons>
+    </Buttons>
 </EditForm>
 
 @code {
