--- a/MusicClubManager.Cms.Blazor/wwwroot/css/app.css
+++ b/MusicClubManager.Cms.Blazor/wwwroot/css/app.css
@@ -87,8 +87,7 @@ code {
     font-family: Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-
- /*   outline: 1px dotted red;*/
+    /*   outline: 1px dotted red;*/
 }
 
 html {
@@ -105,6 +104,21 @@ div#app {
     min-height: 100vh;
 }
 
+
+
+/*        form > div > a {
+            align-self: flex-start;
+            background-color: rgb(67,161,107);
+            color: rgb(255,255,255);
+            font-weight: bold;
+            padding: .5em;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+
+            form > div > a:hover {
+                background-color: rgb(47,141,87);
+            }*/
 /*form {
     display: flex;
     flex-direction: column;
